--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Ana Clara Venturini"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^4.1.2"
+djangorestframework = "^3.14.0"
 
 [tool.poetry.dev-dependencies]
 
