--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Ana Clara Venturini"]
 python = "^3.8"
 Django = "^4.1.2"
 djangorestframework = "^3.14.0"
+django-cors-headers = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 
