--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ drf-spectacular = "^0.24.2"
 
 [tool.poetry.dev-dependencies]
 
+[tool.poetry.group.dev.dependencies]
+isort = "^5.10.1"
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
